[gd_scene load_steps=5 format=3 uid="uid://bpp5prn0i7p1t"]

[ext_resource type="Script" path="res://Scripts/powerups.gd" id="1_gtrbo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eefnu"]
size = Vector2(12, 12)

[sub_resource type="Gradient" id="Gradient_fdsaq"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oamyw"]
gradient = SubResource("Gradient_fdsaq")

[node name="powerUp2" type="RigidBody2D"]
collision_layer = 18
collision_mask = 33
gravity_scale = 0.0
script = ExtResource("1_gtrbo")
rotation_speed = 10

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eefnu")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, 2.08616e-07)
scale = Vector2(0.046875, 12)
texture = SubResource("GradientTexture1D_oamyw")

[node name="power_timeout" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 144

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_eefnu")

[connection signal="timeout" from="power_timeout" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
